--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="city_name_margin_top">50dp</dimen>
+    <dimen name="city_name_margin_top">15dp</dimen>
     <dimen name="margin_15_dp">15dp</dimen>
+    <dimen name="margin_10_dp">10dp</dimen>
     <dimen name="temperature_value_text_size">40sp</dimen>
     <dimen name="feels_like_text_size">30sp</dimen>
     <dimen name="HumidityText">20sp</dimen>
@@ -14,4 +15,10 @@
 
     <dimen name="main_container_text_size">10sp</dimen>
     <dimen name="margin_5_dp">5dp</dimen>
+
+    <dimen name="weather_icon_width">100dp</dimen>
+    <dimen name="weather_icon_height">60dp</dimen>
+    <dimen name="weather_icon_margin">20dp</dimen>
+
+    <dimen name="town_header_height">100dp</dimen>
 </resources>
