--- a/app/src/main/res/menu/main_screen_menu.xml
+++ b/app/src/main/res/menu/main_screen_menu.xml
@@ -5,4 +5,9 @@
         android:id="@+id/menu_threads"
         android:title="@string/threads"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_history"
+        android:title="@string/menu_title_history"
+        android:icon="@drawable/ic_history"
+        app:showAsAction="always"/>
 </menu>
