--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,4 +21,6 @@
     <dimen name="weather_icon_margin">20dp</dimen>
 
     <dimen name="town_header_height">100dp</dimen>
+
+    <dimen name="hairline">1dp</dimen>
 </resources>
